<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.remotedroidconn.WritingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Keypad"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/button"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginTop="76dp"
        android:text="@string/btn_a"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="62dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="76dp"
        android:text="@string/btn_b"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="62dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_f"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <Button
        android:id="@+id/button4"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_j"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="132dp"

        android:text="@string/btn_e"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button6"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="108dp"

        android:layout_marginTop="196dp"
        android:text="@string/btn_i"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_m"

        android:textAllCaps="false"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="259dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"

        android:layout_marginTop="324dp"
        android:text="@string/btn_q"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="384dp"
        android:text="@string/btn_u"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="444dp"
        android:text="@string/btn_y"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="256dp"
        android:text="@string/btn_n"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="324dp"

        android:text="@string/btn_r"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="384dp"
        android:text="@string/btn_v"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="108dp"

        android:layout_marginTop="8dp"
        android:text="@string/btn_shift"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

    <Button
        android:id="@+id/button15"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"

        android:text="@string/btn_c"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="132dp"
        android:text="@string/btn_g"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="196dp"
        android:text="@string/btn_k"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="184dp"
        android:text="@string/btn_o"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:layout_marginLeft="184dp"
        android:text="@string/btn_s"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginLeft="184dp"

        android:text="@string/btn_w"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button21"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="256dp"
        android:text="@string/btn_z"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button22"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="76dp"

        android:text="@string/btn_d"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button23"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="324dp"
        android:layout_marginLeft="256dp"

        android:text="@string/btn_h"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button24"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:layout_marginLeft="256dp"

        android:text="@string/btn_l"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="256dp"
        android:text="@string/btn_p"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button26"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:layout_marginLeft="256dp"
        android:text="@string/btn_t"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button27"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginLeft="256dp"
        android:text="@string/btn_x"

        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
